# lexe-max

./: .gitignore  CLAUDE.md  ChatGPT-Strategie per pipeline KB.json  Dockerfile  Dockerfile.kb  KB_SETUP.md  LEO-REFERENCES-T4.md  README.md  docker-compose.kb.yml  mappa-lexe-max.md  pyproject.toml
benchmarks/: recovery_llm_20260416.json  recovery_regex_20260416.json
config/: document_codes.json
data/: calibrator_v1.json  extracted_indices.json  kb_catalog_v0.1.json  openrouter_benchmark_results.json  r1_r2_complete_benchmark.json  reranker_benchmark_results.json  retrieval_benchmark_results.json  schema_kb_normativa_v0.1.json
docs/: ARTICLE_EXTRACTION_STRATEGIES.md  ARTICOLI_EXTRA_DIFF.md  GRAPH-IMPLEMENTATION-PLAN.md  KB-CATEGORY-GRAPH-HANDOFF.md  KB-EMBEDDING-BENCHMARK-DECISION-LOG.md  KB-HANDOFF.md  KB-MASSIMARI-ARCHITECTURE.md  KB-MASSIMARI-BENCHMARK-REPORT.md  KB-MASSIMARI-COMPLETE.md  KB-MASSIMARI-STAGING-DEPLOY.md  KB-NORM-GRAPH-HANDOFF.md  KB-NORMATIVA-ALTALEX.md  KB-NORMATIVA-INGESTION.md  KB_V3_UNIFIED_SCHEMA.md  QA_REPORT_2026-01-30.md  QC_PLAYBOOK_KB_NORMATIVA.md  SCHEMA_KB_OVERVIEW.md  cgue_cellar_ingestion.md  citation_graph_viewer.html  quasigrafi.md  sprint27_t5_backlog_followup.md  sprint27_t5_gate_b_redefine.md
migrations/: 003_ingestion_profiles.sql  004_multi_model_embeddings.sql
scripts/: RUNBOOK_ONDA1.md  article_classification.py  article_quality.py  backfill_section_pages.py  backfill_work_id.py  batch_altalex_embed.py  batch_embed_results.json  batch_normativa_ingestion.py  benchmark_r1_r2_complete.py  benchmark_rerankers.py  cc_fetch_log.txt  (+80 more)
(+260 files in other folders)
